# cmakeLess

./: CMakeLists.txt
inc/: CMakeLists.txt
inc/head/: head1.h  head2.h
inc/src/: src1.c  src2.c
main/: main.c  main.h
unitTests/: CMakeLists.txt
unitTests/srcTests/: test1.c  test2.c
